--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    /*background-color: rgb(220, 220, 220);*/
     background-color: transparent;
 }
 
+/*index.html*/
 .title1 {
     margin-top: 50px;
     margin-left: 15px;
@@ -27,6 +31,8 @@ body {
 .index-img {
     margin-top: 50px;
     margin-left: 50px;
+    width: 100%;
+    height: auto;
 }
 
 .card {
@@ -45,20 +51,6 @@ body {
     margin-left: 35px;
 }
 
-.addButtons {
-    margin-bottom: 30px;
-}
-
-.testButtons1 {
-    margin-left: 20px;
-    margin-bottom: 30px;
-}
-
-.index-button {
-    margin-top: 15px;
-    margin-left: 155px;
-}
-
 .card-title {
     margin-top: 10px;
 }
@@ -70,6 +62,18 @@ body {
 #theme {
     margin-top: 1.5rem;
 }
+
+/*hozzaadas.html*/
+.addButtons {
+    margin-bottom: 30px;
+}
+
+.testButtons1 {
+    margin-left: 20px;
+    margin-bottom: 30px;
+}
+
+
 
 #cardsTable {
     margin-top: 30px;
@@ -117,10 +121,10 @@ h5 {
     border-bottom-color: darkslategrey;
 }
 
-.cardData {
+/* .cardData {
     border-bottom-style: solid;
     border-bottom-color: darkslategrey;
-}
+} */
 
 .question {
     margin-top: 30px;
