--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,10 @@ h5 {
 
 .list-group {
     margin-top: 40px;
-    margin-bottom: 20px;
+}
+
+.list-group-item {
+    padding-bottom: 22px;
 }
 
 /*nyelvek.html*/
