--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -70,18 +72,6 @@ h5 {
     height: auto;
 }
 
-/* .card {
-    width: 90%;
-    height: auto;
-    margin-top: 60px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    border: solid 15px brown;
-    border-radius: 40px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-} */
-
 .flip-card {
     background-color: transparent;
     width: 90%;
@@ -90,63 +80,52 @@ h5 {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    perspective: 1000px; /* Remove this if you don't want the 3D effect */
-  }
-  
-  /* This container is needed to position the front and back side */
-  .flip-card-inner {
+    perspective: 1000px;
+    /* Remove this if you don't want the 3D effect */
+    border: 1px solid #f1f1f1;
+    border-radius: 40px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
     position: relative;
     width: 100%;
     height: 100%;
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
-  }
-  
-  /* Do an horizontal flip when you move the mouse over the flip box container */
-  .flip-card:hover .flip-card-inner {
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
-  }
-  
-  /* Position the front and back side */
-  .flip-card-front, .flip-card-back {
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
     position: absolute;
     width: 100%;
     height: 100%;
-    -webkit-backface-visibility: hidden; /* Safari */
-    backface-visibility: hidden;
-  }
-  
-  /* Style the front side (fallback if image is missing) */
-  .flip-card-front {
-    background-color: #f1f1f1;
-    color: black;
-    border: 1px solid #f1f1f1;
-    border-radius: 40px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-
-  .flip-card-front p{
-      font-size: 30px;
-      font-weight: 500;
-      margin-top: 20px;
-  }
-  
-  /* Style the back side */
-  .flip-card-back {
-    background-color: #f1f1f1;
-    color: black;
-    border: 1px solid #f1f1f1;
-    border-radius: 40px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    transform: rotateY(180deg);
-  }
-  
-  .flip-card-back p{
     font-size: 30px;
     font-weight: 500;
-    margin-top: 20px;
+    -webkit-backface-visibility: hidden;
+    /* Safari */
+    backface-visibility: hidden;
+    background-color: #f1f1f1;
+    color: black;
+    border-radius: 40px;
 }
+
+.flip-card-front p, .flip-card-back p {
+    margin-top: 25px;
+}
+
+/* Style the back side */
+.flip-card-back {
+    transform: rotateY(180deg);
+}
+
 
 #previousButton {
     font-size: 20px;
@@ -233,7 +212,7 @@ h5 {
     text-align: center;
     margin-left: 80px;
     margin-right: 80px;
-    
+
 }
 
 .lang-img1, .lang-img3, .lang-img5 {
@@ -352,5 +331,3 @@ h5 {
     border-bottom-style: solid;
     border-bottom-color: darkslategrey;
 }
-
-
