--- a/css/style.css
+++ b/css/style.css
@@ -77,18 +77,18 @@ h5 {
 }
 
 .flip-card {
-    background-color: transparent;
-    width: 90%;
-    height: 250px;
-    margin-top: 60px;
-    margin-left: auto;
-    margin-right: auto;
+    background: white;
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
+    width: 75%;
+    height: 15rem;
+    margin: 1rem auto;
+    margin-top: 4rem;
     text-align: center;
     perspective: 1000px;
     /* Remove this if you don't want the 3D effect */
-    border: 1px solid #f1f1f1;
-    border-radius: 40px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    backdrop-filter: blur(3rem);
+    border-radius: 3rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.20), 0 6px 20px 0 rgba(0, 0, 0, 0.190);
 }
 
 /* This container is needed to position the front and back side */
@@ -96,7 +96,6 @@ h5 {
     position: relative;
     width: 100%;
     height: 100%;
-    text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
 }
@@ -111,18 +110,18 @@ h5 {
     position: absolute;
     width: 100%;
     height: 100%;
-    font-size: 30px;
+    font-size: 1.8rem;
     font-weight: 500;
     -webkit-backface-visibility: hidden;
     /* Safari */
     backface-visibility: hidden;
     background-color: #f1f1f1;
     color: black;
-    border-radius: 40px;
+    border-radius: 3rem;
 }
 
 .flip-card-front p, .flip-card-back p {
-    margin-top: 25px;
+    margin-top: 1.5rem;
 }
 
 /* Style the back side */
