--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ h5 {
     perspective: 1000px;
     /* Remove this if you don't want the 3D effect */
     backdrop-filter: blur(3rem);
-    border-radius: 3rem;
+    border-radius: 2rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.20), 0 6px 20px 0 rgba(0, 0, 0, 0.190);
 }
 
@@ -96,7 +96,7 @@ h5 {
     position: relative;
     width: 100%;
     height: 100%;
-    transition: transform 0.8s;
+    transition: transform 0.7s;
     transform-style: preserve-3d;
 }
 
@@ -117,7 +117,7 @@ h5 {
     backface-visibility: hidden;
     background-color: #f1f1f1;
     color: black;
-    border-radius: 3rem;
+    border-radius: 2rem;
 }
 
 .flip-card-front p, .flip-card-back p {
@@ -129,15 +129,13 @@ h5 {
     transform: rotateY(180deg);
 }
 
-
 #previousButton {
     font-size: 20px;
-    margin-top: 15px;
-    margin-left: 5%;
-    width: 42.5%;
+    margin-left: 4.1rem;
+    width: 36%;
     height: auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 10px;
+    border-radius: 1rem;
     transition: 0.3s;
 }
 
@@ -148,13 +146,12 @@ h5 {
 
 #nextButton {
     font-size: 20px;
-    margin-top: 15px;
-    margin-left: 2.5%;
-    width: 42.5%;
+    margin-left: 2%;
+    width: 36%;
     height: auto;
     position: absolute;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 10px;
+    border-radius: 1rem;
     transition: 0.3s;
 }
 
