--- a/css/style.css
+++ b/css/style.css
@@ -342,27 +342,23 @@ h5 {
    height: 9%;
    color: rgba(255,255,255,.5);;
    font-size: 1.1rem;
+   display: flex;
+   justify-content: space-between;
 }
 
 .icons {
-    display: inline-block;
+    margin-top: 1rem;
     margin-left: 2rem;
-    
 }
 
 .icons a {
     color: rgba(255,255,255,.5);
-    padding: 0 2px;
+    padding-left: 0.2rem;
 }
 
 .footer p {
-    display: inline-block;
-    padding-left: 0;
-    margin-top: 0.8rem;
-    margin-left: 30rem;
+    margin-top: 1rem;
+    margin-right: 2rem;
 }
 
-.date {
-    float: right;
-    padding-right: 2rem;
-}
+
