--- a/css/style.css
+++ b/css/style.css
@@ -69,12 +69,11 @@ h5 {
 }
 
 .index-img {
-    margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
+    margin: 50px auto;
+    width: 80%;
     height: auto;
     border-radius: 2rem;
+    opacity: 0.9;
 }
 
 .flip-card {
@@ -130,7 +129,7 @@ h5 {
     transform: rotateY(180deg);
 }
 
-#previousButton {
+.previousButton {
     font-size: 20px;
     margin-left: 4.1rem;
     width: 36%;
@@ -140,14 +139,14 @@ h5 {
     transition: 0.3s;
 }
 
-#previousButton:hover {
+.previousButton:hover {
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0.32);
 }
 
-#nextButton {
+.nextButton {
     font-size: 20px;
-    margin-left: 2%;
+    margin-left: 0.6rem;
     width: 36%;
     height: auto;
     position: absolute;
@@ -156,22 +155,10 @@ h5 {
     transition: 0.3s;
 }
 
-#nextButton:hover {
+.nextButton:hover {
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0.32);
 }
-
-/* .card-title {
-    margin-top: 10px;
-}
-
-.card-title2 {
-    margin-top: 6%;
-}
-
-#theme {
-    margin-top: 6%;
-} */
 
 /*listak.html*/
 #cardsTable {
@@ -340,7 +327,8 @@ h5 {
    bottom: 0;
    width: 100%;
    height: 9%;
-   color: rgba(255,255,255,.5);;
+   color: rgba(255,255,255,.5);
+   /* color: rgb(255, 255, 255); */
    font-size: 1.1rem;
    display: flex;
    justify-content: space-between;
@@ -353,6 +341,7 @@ h5 {
 
 .icons a {
     color: rgba(255,255,255,.5);
+    /* color: rgb(255, 255, 255); */
     padding-left: 0.2rem;
 }
 
