--- a/css/style.css
+++ b/css/style.css
@@ -30,27 +30,6 @@ body {
     border-bottom-color: darkslategrey;
 }
 
-
-
-/*hozzaadas.html*/
-.fieldset {
-    margin-top: 45px;
-    margin-left: 20px;
-}
-
-#cardForm {
-    margin-left: 20px;
-}
-
-.add-img, .add-img2 {
-    margin-top: 50px;
-    margin-left: 25px;
-    margin-right: auto;
-    width: 80%;
-    height: auto;
-    border-radius: 6px;
-}
-
 /*index.html*/
 .index-title {
     margin-top: 50px;
@@ -68,7 +47,6 @@ body {
 }
 
 .flip-card {
-    background: white;
     background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
     width: 75%;
     height: 15rem;
@@ -121,6 +99,7 @@ body {
 }
 
 .previousButton {
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
     font-size: 20px;
     margin-left: 4.1rem;
     width: 36%;
@@ -136,6 +115,7 @@ body {
 }
 
 .nextButton {
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
     font-size: 20px;
     margin-left: 0.6rem;
     width: 36%;
@@ -211,6 +191,51 @@ body {
     margin-left: 1%;
     margin-right: auto;
     width: 24%;
+}
+
+/* hozzaadas.html  */
+.add-container {
+    margin: 0;
+    padding: 0;
+}
+
+.add-img {
+    filter: brightness(90%);
+    width: 118%;
+    height: 600px;
+}
+
+.add-row {
+    position: absolute;
+    top: 12%;
+    left: 10%;
+}
+
+.card-form {   
+    margin: 1.6rem 1.6rem;
+    padding-right: 4rem;
+    font-weight: 500;
+    /* filter: brightness(50%); */
+}
+
+.card-form input, .card-form select {
+    font-weight: 500;
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
+}
+
+.add-btn {
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
+    margin-bottom: 2rem;
+    transition: 0.3s;
+}
+
+.add-btn a {
+    color: black;
+}
+
+.add-btn:hover {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.32);
 }
 
 /*listak.html*/
