--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .title1 {
-    margin-top: 50px;
+    margin-top: 3rem;
     margin-left: auto;
     margin-right: auto;
     text-align: justify;
@@ -168,7 +168,7 @@ body {
 
 /*temakorok.html*/
 .theme-listgroup {
-    margin: 2rem 0;
+    margin: 3rem 0;
     border: rgba(255, 255, 255, 0.7);
     border-radius: 1rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -279,8 +279,7 @@ body {
 
 /*teszt1-teszt2-teszt3.html*/
 .test {
-    margin-top: 40px;
-    margin-left: 30px;
+    margin: 2.9rem 2rem;
 }
 
 .test-legend {
